# quick-object-storage-perf-benchmark

./: README.md  benchmark-pod.yaml.template  run-benchmark.sh
qps-bench/: Cargo.toml
qps-bench/src/: main.rs
