# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "opendal-examples-qps-bench"
publish = false

edition.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "qps-bench"
path = "src/main.rs"

[dependencies]
opendal = { path = "../..", features = ["tests", "services-s3"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hdrhistogram = "7.5"
uuid = { workspace = true, features = ["v4"] }
rand = { workspace = true }
futures = { workspace = true }

